# IPRA-exp

./: .gitignore  .gitmodules  Makefile  Readme.md  fdoipra.patch  fix.patch  make  make.sh
benchmarks/: bench.mk  bench.sh  build.mk  common.mk  gdbscript  gdbscript2  gdbscript3  gdbscript3-copy  hpcc-clang.sh  hpcc-gcc.sh  hpcc-leveldb.sh  hpcc-mongodb.sh  hpcc-mysql.sh  hpcc.sh  pick.sh  regprof.sh  report-full.ipynb  report-remote.ipynb  report.ipynb  test.sh
benchmarks/SPEC/: .gitignore  build.mk  pgo-fulllto.cfg  propeller-thinlto.cfg
benchmarks/cfg/: pgo-fulllto-fdoipra  pgo-fulllto-fdoipra2  pgo-fulllto-fdoipra3-hl  pgo-fulllto-ipra
benchmarks/clang/: .gitignore  FDO_test.yaml  atomic.cpp  build.mk  gdbscript  test.cpp  test.mk
benchmarks/dparser/: DParser.yaml  build.mk  scripts.sh
benchmarks/example/: CMakeLists.txt  FDO_test.yaml  example.mk  main.c  main2.c
benchmarks/example-hotpath/: example.mk  main.c  main2.c
benchmarks/example-no-caller-saved/: FDO_test.yaml  example.mk  main.c  main2.c
benchmarks/example-scalable/: example.mk  main.c  test.c
benchmarks/example-virtualcall/: example.mk  main.cpp  main2.cpp
benchmarks/fleet/: build.mk
benchmarks/gcc/: build.mk  (+1 more)
counter/: counter.go
example/: build.mk
push-pop-counter/: CMakeLists.txt  lib.c  main.cpp
reproduce-bug/: .gitignore  Makefile
scripts/: copy-back.sh  copy-to-test-machine.sh  gcert.sh  run-on-remote.sh
singularity/: IPRA.def  bk  requirements-for-7.0.txt  requirements.txt
utils/: BUILD  clang-proxy.go  clang_proxy.go  count-sum.cpp  process_cmd.go  submit.cpp
(+55 files in other folders)
