cmake_minimum_required(VERSION 3.6)
project(ppcount)

add_library(ppcount SHARED main.cpp)
find_package(DynamoRIO)
if (NOT DynamoRIO_FOUND)
  message(FATAL_ERROR "DynamoRIO package required to build")
endif(NOT DynamoRIO_FOUND)
configure_DynamoRIO_client(ppcount)
use_DynamoRIO_extension(ppcount drmgr drreg)